Removed semicolons in common styles

--- a/src/common/reset.styl
+++ b/src/common/reset.styl
@@ -78,33 +78,33 @@ h3,
 h4,
 h5,
 h6
-  margin: 0;
-  padding: 0;
-  border: 0;
-  outline: 0;
-  font-size: 100%;
-  vertical-align: baseline;
-  background: transparent;
-  font-style: inherit;
+  margin: 0
+  padding: 0
+  border: 0
+  outline: 0
+  font-size: 100%
+  vertical-align: baseline
+  background: transparent
+  font-style: inherit
 
 html
-  height: 100%;
+  height: 100%
 
 body
-  position: relative;
-  min-height: 100%;
+  position: relative
+  min-height: 100%
 
 a:active,
 a:hover
-  outline: 0;
+  outline: 0
 
 button,
 input
-  line-height: normal;
+  line-height: normal
 
 button,
 select
-  text-transform: none;
+  text-transform: none
 
 article,
 aside,
@@ -118,66 +118,66 @@ main,
 nav,
 section,
 summary
-  display: block;
+  display: block
 
 pre
-  overflow: auto;
+  overflow: auto
 
 audio,
 canvas,
 video
-  display: inline-block;
+  display: inline-block
 
 audio:not([controls])
-  display: none;
-  height: 0;
+  display: none
+  height: 0
 
 blockquote, q
-  quotes: none;
+  quotes: none
 
 blockquote:before, blockquote:after,
 q:before, q:after
-  content: '';
-  content: none;
+  content: ''
+  content: none
 
 table
-  border-collapse: collapse;
-  border-spacing: 0;
+  border-collapse: collapse
+  border-spacing: 0
 
 caption,
 th, td
-  text-align: left;
-  vertical-align: top;
-  font-weight: normal;
+  text-align: left
+  vertical-align: top
+  font-weight: normal
 
 button,
 input,
 select,
 textarea
-  margin: 0;
+  margin: 0
 
 textarea
-  overflow: auto;
-  vertical-align: top;
+  overflow: auto
+  vertical-align: top
 
 button
-  width: auto;
-  overflow: visible;
+  width: auto
+  overflow: visible
 
 input[type=button],
 input[type=submit],
 button
-  cursor: pointer;
+  cursor: pointer
 
 input[type="radio"],
 input[type="checkbox"]
-  font-size: 110%;
-  box-sizing: border-box;
+  font-size: 110%
+  box-sizing: border-box
 
 input[type="search"]
-  -webkit-appearance: textfield;
-  box-sizing: border-box;
+  -webkit-appearance: textfield
+  box-sizing: border-box
 
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-decoration
-  -webkit-appearance: none;
+  -webkit-appearance: none
